crates/lang/macro/tests/ui/contract/fail/constructor-unsafe.stderr
error: ink! constructors must not be unsafe
  --> $DIR/constructor-unsafe.rs:10:13
   |
10 |         pub unsafe fn constructor() -> Self {
   |             ^^^^^^
